Fixed alignment for 100% SSD

--- a/datacenterlight/static/datacenterlight/css/landing-page.css
+++ b/datacenterlight/static/datacenterlight/css/landing-page.css
@@ -652,7 +652,7 @@ tech-sub-sec h2 {
     line-height: 55px;
 }
 .space-middle{
-	padding: 35px 0;
+	padding: 45px 0;
 }
 .padding-vertical{
 	padding: 35px 0;
